Unreviewed, non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=240369

Source/JavaScriptCore:

* runtime/DateConversion.cpp:

Source/WebCore:

* Modules/highlight/HighlightRegister.h:
* rendering/TextPainter.h:

Canonical link: https://commits.webkit.org/250524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294154 268f45cc-cd09-0410-ab3c-d52691b4dbfc